fix: align text

--- a/style/flow/general.scss
+++ b/style/flow/general.scss
@@ -7,6 +7,7 @@ $gap: 8px;
     gap: $gap;
 
     &.center {
+        text-align: center;
         align-items: center;
     }
 }
